--- a/_includes/views/pagination.html
+++ b/_includes/views/pagination.html
@@ -11,16 +11,23 @@
     {%- for post in paginator.posts -%}
     <li>
       {%- assign date_format = site.yat.date_format | default: "%b %-d, %Y" -%}
-      <span class="post-meta">{{ post.date | date: date_format }}</span>
-      <h3>
+      <h2 class="post-title">
         {%- assign post_url = post.url | relative_url -%}
         <a class="post-link" href="{{ post_url }}">
           {{ post.title | escape }}
         </a>
-      </h3>
+      </h2>
+      <div class="post-meta">
+        <span class="post-date">{{ post.date | date: date_format }}</span>
+      </div>
       <p class="post-excerpt">
         {{ post.content | strip_html | truncatewords: 50 }}
       </p>
+      <div class="post-tags">
+        {%- for tag in post.tags -%}
+        <a class="post-tag" href="/tags.html#{{tag}}">#{{tag}}</a>
+        {%- endfor -%}
+      </div>
     </li>
     {%- endfor -%}
   </ul>
