--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -2,18 +2,18 @@
 
 // Define defaults for each variable.
 
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif, Oswald,
-"Apple Color Emoji", "Open Sans", "FontAwesome", !default;
-$base-font-size:   14px !default;
+$base-font-family: 'Noto Sans Light', 'AppleSDGothicNeo-Regular', 'Malgun
+Gothic', "Apple Color Emoji", Helvetica, Arial, sans-serif, Oswald, dotum, sans-serif, !default;
+$base-font-size: 14px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
-$base-line-height: 1.5 !default;
+$base-line-height: 1.6 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #333 !default;
-$background-color: #fefefe !default;
-$brand-color:      #2a7ae2 !default;
+$text-color:       #313b3f !default;
+$background-color: #fff !default;
+$brand-color:      #ff5100 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
@@ -24,16 +24,16 @@ $white-color: #fdfdfd !default;
 $table-text-align: left !default;
 
 $header-height: $base-line-height * $base-font-size * 2.85 !default;
-$header-text-color: lighten($white-color, 10%) !default;
+$header-text-color: invert($theme-color) !default;
 $header-background-color: $theme-color !default;
 
 $footer-height: $header-height * 1.05 !default;
-$footer-text-color: rgba(lighten(invert($theme-color), 30%), 50%) !default;
+$footer-text-color: lighten(invert($theme-color), 25%) !default;
 $footer-background-color: darken($theme-color, 5%) !default;
 
-$banner-height: 420px !default;
+$banner-height: 640px !default;
 $banner-text-color: lighten($white-color, 0%) !default;
-$banner-background: darken(#333, 5%) !default;
+$banner-background: rgba(0,0,0,0.8) !default;
 
 // Width of the content area
 $content-width:    920px !default;
@@ -62,7 +62,7 @@ $on-laptop:        800px !default;
 @import
   "yat/base",
   "yat/layout",
-  "yat/syntax-highlighting",
+  // "yat/syntax-highlighting",
   "misc/article-menu",
   "misc/common-list",
   "misc/google-translate"
