--- a/_sass/misc/google-translate.scss
+++ b/_sass/misc/google-translate.scss
@@ -184,7 +184,7 @@ body {
       margin-top: 8px;
       max-height: 10000px;
       visibility: visible;
-      box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .06);
+      box-shadow: 0 0 9px 3px rgba(0, 0, 0, .06);
     }
   }
 
