--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,13 +21,16 @@ sidebar:
 
     <div class="post-nav">
       {%- if page.previous -%}
-        <a class="previous" href="{{ page.previous.url }}" title="{{ page.previous.title | escape }}">{{ page.previous.title | escape }}</a>
+        <a class="previous" href="{{ page.previous.url }}" title="{{
+          page.previous.title | escape }}">{{ page.previous.title | escape |
+          truncatewords: 6 }}</a>
       {%- else -%}
       <span></span>
       {%- endif -%}
 
       {%- if page.next -%}
-        <a class="next" href="{{ page.next.url }}" title="{{ page.next.title | escape }}">{{ page.next.title | escape }}</a>
+        <a class="next" href="{{ page.next.url }}" title="{{ page.next.title |
+          escape }}">{{ page.next.title | escape | truncatewords: 6 }}</a>
       {%- else -%}
       <span></span>
       {%- endif -%}
