--- a/_includes/views/post-header.html
+++ b/_includes/views/post-header.html
@@ -5,8 +5,13 @@
   <p class="post-meta">
     <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
       {%- assign date_format = site.yat.date_format | default: "%b %-d, %Y" -%}
-      {{ page.date | date: date_format }}
+      <i class="fa fa-calendar"></i> {{ page.date | date: date_format }}
     </time>
+
+    {% assign article = page.content %}
+    {%- include functions.html func='get_reading_time' -%}
+    {% assign reading_time = return %}
+    <span class="post-reading-time left-vsplit"><i class="fa fa-clock-o"></i> {{ reading_time }}</span>
   </p>
 
   {%- if page.tags.size > 0 -%}
