--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -319,9 +319,14 @@ html {
     border: 1px solid;
     padding: 2px 4px;
     border-radius: 2px;
+    transition: color 0.2s;
 
     &:not(:first-child) {
       margin-left: 8px;
+    }
+
+    &:hover {
+      color: #777;
     }
   }
 
