chore: change inline code block background color

--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -154,7 +154,7 @@ code {
   padding: 1px 5px;
   border-radius: 3px;
   color: #fff;
-  background-color: $brand-color;
+  background-color: #545454;
 }
 
 pre {
