fix: wrong relative url in sidebar extensions (#1)

--- a/_includes/sidebar/archive-list.html
+++ b/_includes/sidebar/archive-list.html
@@ -6,5 +6,5 @@
 
 {% assign keys = datetimes %}
 {% assign field = 'date' %}
-{% assign url = '/archives.html' %}
+{% assign url = '/archives.html' | relative_url %}
 {% include sidebar/common-list.html %}
