--- a/_includes/sidebar/common-list.html
+++ b/_includes/sidebar/common-list.html
@@ -9,7 +9,7 @@
 <div class="common-list">
   <ul>
     <li>
-      <a href="/index.html">
+      <a href="{{ '/index.html' | relative_url }}">
         All<span>{{ site.posts.size }}</span>
       </a>
     </li>
