--- a/_includes/sidebar/tag-list.html
+++ b/_includes/sidebar/tag-list.html
@@ -5,5 +5,5 @@
 
 {% assign keys = tags %}
 {% assign field = 'tags' %}
-{% assign url = '/tags.html' %}
+{% assign url = '/tags.html' | relative_url %}
 {%- include sidebar/common-list.html -%}
