feat: centering svg images

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -420,7 +420,7 @@ html {
       }
     }
 
-    img, iframe {
+    img, svg, iframe {
       margin-left: auto;
       margin-right: auto;
       display: block;
