fix: header_transparent option not working

--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -1,13 +1,13 @@
 
 {%- include functions.html func='log' level='debug' msg='Get banner value' -%}
-{% assign name = 'banner' %}
+{%- assign name = 'banner' -%}
 {%- include functions.html func='get_value' -%}
 {% assign banner = return %}
 
 {%- include functions.html func='log' level='debug' msg='Get header_transparent value' -%}
-{% assign name = 'header_transparent' %}
-{%- include functions.html func='get_value' -%}
-{% assign header_transparent = return | default: true %}
+{%- assign name = 'header_transparent' -%}
+{%- include functions.html func='get_value' default=true -%}
+{%- assign header_transparent = return -%}
 
 {%- if banner and header_transparent -%}
   {%- assign header_transparent_class = "site-header-transparent" -%}
