--- a/_sass/misc/google-translate.scss
+++ b/_sass/misc/google-translate.scss
@@ -113,7 +113,7 @@ body {
 // Main look
 
 .ct-language-selected {
-  background: darken($theme-color, 5%) !important;
+  background-color: darken($theme-color, 5%) !important;
 }
 
 .ct-language-dropdown {
