--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -151,7 +151,8 @@ code {
   padding: 1px 5px;
   border-radius: 3px;
   color: #fff;
-  background-color: #545454;
+  background-color: #787878;
+  margin: 0 5px;
 }
 
 pre {
