feat: add night mode (#4)

--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -61,7 +61,8 @@ $on-laptop:        800px !default;
 @import
   "yat/base",
   "yat/layout",
-  // "yat/syntax-highlighting",
+  "yat/dark",
+  "misc/theme-toggle",
   "misc/article-menu",
   "misc/common-list",
   "misc/google-translate"
